--- a/Movies_Website_Images_And_Video/style.css
+++ b/Movies_Website_Images_And_Video/style.css
@@ -12,9 +12,9 @@
 :root {
     --main-color: #FF6B6B;
     --hover-color:  hsl(350, 100%, 66%);
-    --body-color: #1B1A29;;
-    --container-color: #2C2B3D;
-    --text-color: #F5E6CC;
+    --body-color: #1B1A29;
+   --text-color: #F5E6CC;
+   --container-color: #2C2B3D;
 }
 a{
     text-decoration: none;
@@ -22,10 +22,112 @@ a{
 li{
     list-style: none;
 }
+section{
+    padding: 3rem 0 2rem;
+}
 img{
     width: 100%;
+}
+.bx{
+cursor: pointer;
 }
 body{
     background: var(--body-color);
     color: var(--text-color);
+}
+.container{
+    max-width: 1068px;
+    margin: auto;
+    width: 100%;
+}
+header{
+    position:fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background:var(--body-color);
+    z-index: 100;  
+}
+/*nav */
+.nav{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 20px 0;
+}
+/*logo */
+.logo{
+    font-size: 1.4rem;
+    color: var(--text-color);
+    font-weight: 600;
+    text-transform: uppercase;
+    margin: 0 auto 0 0;
+}
+.logo span{
+    color: var(--main-color);
+}
+/* search*/
+.search-box{
+    max-width: 240px;
+    width: 100%;
+    display:flex;
+    align-items: center;
+    column-gap: 0.7rem;
+    padding: 8px 15px;
+    background: var(--container-color);
+    border-radius: 4rem;
+    margin-right: 1rem;
+}
+.search-box .bx{
+ font-size: 1.1rem;
+}
+.search-box .bx:hover{
+    color: var(--main-color);
+}
+#search-input{
+    width: 100%;
+    border: none;
+    outline: none;
+    color: var(--text-color);
+    background: transparent;
+    font-size: 0.938rem;
+}
+/* usuario */
+.user{
+    display: flex;
+}
+.user-img{
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    object-fit: cover;
+    object-position: center;
+}
+/*navbar*/
+.navbar{
+    position: fixed;
+    top: 50%;
+    transform: translateY(-50%);
+    left: 18px;
+    display: flex;
+    flex-direction: column;
+    row-gap: 2.1rem;
+}
+.nav-link{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: #F5E6CC;
+}
+.nav-link:hover,
+.nav-active{
+    color: var(--main-color);
+    transition: 0.3s all linear;
+    transform: scale(1.1);
+}
+.nav-link .bx{
+    font-size: 1.6rem;
+}
+.nav-link-title{
+    font-size: 0.7rem;
 }
