--- a/AnimeWebsite/CSS/style.css
+++ b/AnimeWebsite/CSS/style.css
@@ -34,6 +34,8 @@ cursor: pointer;
 body{
     background: var(--body-color);
     color: var(--text-color);
+    padding-left: 60px; /* Ajusta según el ancho de tu navbar */
+    
 }
 .container{
     max-width: 1068px;
@@ -203,4 +205,330 @@ header{
 .heading-title{
     font-size: 1.2rem;
     font-weight: 500;
+}
+/*anime box*/
+.movie-box{
+    position:relative;
+    width: 100%;
+    height: 380px;
+    overflow: hidden;
+}
+.movie-box-img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+      
+   
+}
+.movie-box .box-text{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    padding: 14px;
+    background: linear-gradient(
+        8deg,
+         hsl(240 17% 14%/74%) 14%,
+         hsl(240 17% 14%/14%) 44%
+    );
+    overflow: hidden;
+}
+.movie-title{
+    font-size: 1.1rem;
+    font-weight: 500;
+}
+.movie-type{
+    font-size: 0.938rem;
+}
+.play-btn{
+    position: absolute;
+    bottom: 0.8rem;
+    right: 0.8rem;
+}
+/*swiper btns*/
+.swiper-btn {
+    display: flex;
+}
+.swiper-button-next,
+.swiper-button-prev{
+    position: static !important;
+    margin: 0 0 0 10px;
+}
+.swiper-button-next::after,
+.swiper-button-prev::after{
+    color: var(--text-color);
+    font-size: 18px !important;
+    font-weight: 700;
+}
+/*animes*/
+.movies .heading{
+    padding: 10px 14px;
+}
+.movies-content{
+    display: grid;
+    grid-template-columns: repeat(auto-fit,minmax(247px, 1fr));
+    gap: 1.5rem;
+}
+.movies-content .movie-box:hover .movie-box-img{
+    transform: scale(1.1);
+    transition: 0.5s;
+}
+.next-page{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 2.5rem;
+}
+.next-btn{
+    background: var(--main-color);
+    padding: 12px 20px;
+    color: var(--text-color);
+    font-weight: 500;
+}
+.next-btn:hover{
+    background: var(--hover-color);
+    transition: .3s all linear;
+}
+/* copyright */
+.copyright{
+    text-align: center;
+    padding: 20px;
+}
+/*Play Controls*/
+.play-container{
+    position: relative;
+    min-height: 540px;
+    margin-top: 5rem !important;
+}
+.play-img{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+    z-index: -1;
+}
+.play-text{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display:flex; 
+    flex-direction:column;
+    justify-content: flex-end;
+    padding: 40px;
+    background: linear-gradient(
+        8deg,
+         hsl(240 17% 14%/74%) 14%,
+         hsl(240 17% 14%/14%) 44%
+    );
+}
+.play-text h2{
+    font-size: 1.5rem;
+    font-weight: 600;
+}
+.rating{
+    display: flex;
+    align-items: center;
+    column-gap: 2px;
+    font-size: 1.1rem;
+    color: var(--main-color);
+    margin-top: 4px;
+}
+.tags{
+    display: flex;
+    align-items: center;
+    column-gap: 8px;
+    margin: 1rem 0;
+}
+.tags span{
+    background: var(--container-color);
+    padding: 0 4px;
+}
+.play-op{
+    position: absolute;
+    bottom: 18rem;
+    right: 10rem;
+    display: flex !important;
+    align-items: center;
+    justify-content: center;
+    width: 45px;
+    height: 45px;
+    border-radius: 50%;
+    background: var(--main-color);
+    font-size: 24px;
+    animation: animate 2s linear infinite;
+}
+@keyframes animate{
+    0%{
+        box-shadow: 0 0 0 0 rgb(255, 107, 107, 0.7);
+    }
+    40%{
+        box-shadow: 0 0 0 50px rgb(255, 107, 107, 0);
+    }
+    80%{
+        box-shadow: 0 0 0 50px rgb(255, 107, 107, 0);
+    }
+    100%{
+        box-shadow: 0 0 0 rgb(255, 107, 107, 0);
+    }
+    
+}
+/* video-container*/
+.video-container{
+    position: fixed;
+    top: 0;
+    left: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100vh;
+}
+    /*Play Controls*/
+.play-container{
+    position: relative;
+    min-height: 540px;
+    margin-top: 5rem !important;
+}
+.play-img{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+    z-index: -1;
+}
+.play-text{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display:flex; 
+    flex-direction:column;
+    justify-content: flex-end;
+    padding: 40px;
+    background: linear-gradient(
+        8deg,
+         hsl(240 17% 14%/74%) 14%,
+         hsl(240 17% 14%/14%) 44%
+    );
+}
+.play-text h2{
+    font-size: 1.5rem;
+    font-weight: 600;
+}
+.rating{
+    display: flex;
+    align-items: center;
+    column-gap: 2px;
+    font-size: 1.1rem;
+    color: var(--main-color);
+    margin-top: 4px;
+}
+.tags{
+    display: flex;
+    align-items: center;
+    column-gap: 8px;
+    margin: 1rem 0;
+}
+.tags span{
+    background: var(--container-color);
+    padding: 0 4px;
+}
+.play-op{
+    position: absolute;
+    bottom: 18rem;
+    right: 10rem;
+    display: flex !important;
+    align-items: center;
+    justify-content: center;
+    width: 45px;
+    height: 45px;
+    border-radius: 50%;
+    background: var(--main-color);
+    font-size: 24px;
+    animation: animate 2s linear infinite;
+}
+@keyframes animate{
+    0%{
+        box-shadow: 0 0 0 0 rgb(255, 107, 107, 0.7);
+    }
+    40%{
+        box-shadow: 0 0 0 50px rgb(255, 107, 107, 0);
+    }
+    80%{
+        box-shadow: 0 0 0 50px rgb(255, 107, 107, 0);
+    }
+    100%{
+        box-shadow: 0 0 0 rgb(255, 107, 107, 0);
+    }
+    
+}
+/* video-container*/
+.video-container{
+    position: fixed;
+    top: 0;
+    left: 0;
+    display: none;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100vh;
+    background: hsl(234 10% 20% / 60%);
+    z-index: 400;
+}
+.video-container.show-video{
+    display: flex;
+}
+.video-box{
+    position: relative;
+    width: 82%;
+}
+.video-box #opvideo{
+    width: 100;
+    aspect-ratio: 16/9
+}
+.closevideo{
+    position: absolute;
+    top: -3rem;
+    right: 0;
+    font-size: 40px;
+    color: var(--main-color);
+    z-index: 400;
+}
+.video-box{
+    position: relative;
+    width: 82%;
+}
+.video-box #opvideo{
+    width: 100%;
+    aspect-ratio: 16/9
+}
+.close-video{
+    position: absolute;
+    top: -3rem;
+    right: 0;
+    font-size: 40px;
+    color: var(--main-color);
+}
+/*about anime*/
+.about-anime{
+    margin-top: 2rem;
+}
+.about-anime h2{
+    font-size: 1.4rem;
+    font-weight: 600;
+    color: var(--main-color);    
+}
+.about-anime p{
+    max-width: 600px;
+    font-size: 0.938rem;
+    margin: 10px 0;
 }
