--- a/AnimeWebsite/CSS/style.css
+++ b/AnimeWebsite/CSS/style.css
@@ -16,6 +16,15 @@
    --text-color: #F5E6CC;
    --container-color: #2C2B3D;
 }
+/*custom scrollbar*/
+html::-webkit-scrollbar-thumb{
+    background: var(--main-color);
+}
+/* selection color*/
+::selection{
+    background: var(--main-color);
+    color: var(--text-color);
+}
 a{
     text-decoration: none;
 }
@@ -520,7 +529,7 @@ header{
 }
 /*about anime*/
 .about-anime{
-    margin-top: 2rem;
+    margin-top: 2rem !important;
 }
 .about-anime h2{
     font-size: 1.4rem;
@@ -531,4 +540,238 @@ header{
     max-width: 600px;
     font-size: 0.938rem;
     margin: 10px 0;
+}
+.cast-heading{
+    font-size: 1.2rem;
+    font-weight: 600;
+    margin-bottom: 1rem;
+    color: var(--main-color);
+}
+.cast{
+    display: grid;
+    grid-template-columns: repeat(auto-fit,minmax(150px,150px));
+    gap: 1rem;
+}
+.cast-img{
+    width: 150px;
+    height: 180px;
+    object-fit:cover;
+    object-position: center;
+}
+
+/*download*/
+.download{
+    max-width: 800px;
+    width: 1005;
+    margin: auto;
+    display: grid;
+    justify-content: center;
+    margin-top: 2rem;
+}
+.download-title{
+    text-align: center;
+    font-size: 1.4rem;
+    font-weight: 500;
+    margin: 1.6rem 0;
+    color: var(--main-color);
+}
+.dowload-links{
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    gap: 10px;
+    margin-bottom: 2rem;
+}
+.dowload-links a{
+    text-align: center;
+    background: var(--main-color);
+    padding: 12px 24px;
+    color: var(--body-color);
+    letter-spacing: 1px;
+    font-weight: 500;
+}
+.dowload-links a:hover {
+    background: var(--hover-color);
+
+}
+/* Responsive*/
+@media(max-width: 1170px){
+    .navbar{
+        bottom: 0;
+        left: 0;
+        right: 0;
+        top: auto;
+        transform: translateY(0);
+        flex-direction: row;
+        justify-content: space-evenly;
+        row-gap: 1px;
+        padding: 10px;
+        border-top: 1px solid hsl(200, 100%, 99% / 5%);
+        background: linear-gradient(8deg, 
+        hsl(240 17% 14% / 100%) 5%,
+        hsl(240 17% 14% / 90%) 100%
+        );
+    }
+    .nav-link .bx{
+        font-size: 1.5rem;
+    }
+    .copyright{
+        margin-bottom: 4rem;
+    }
+}
+@media(max-width: 1060px){
+    .container{
+        margin: 0 auto;
+        width: 95%;
+    }
+}
+@media(max-width: 991px){
+    .movie-box{
+        height: 340px;
+    }
+    .movies-content{
+        grid-template-columns: repeat(auto-fit, minmax(214px, 1fr))
+    }
+}
+@media(max-width: 888px){
+    .nav{
+      padding: 14px 0;  
+    }
+    .home{
+        min-height: 440px;
+        margin-top: 4rem !important;
+    }
+    .home-title{
+        font-size: 1.6rem;
+    }
+    .watch-btn span{
+        font-size: 0.9rem;
+    }
+    .movie-title{
+        font-size: 1rem;
+        padding-right: 30px;
+    }
+    .play-container{
+        min-height: 440px;
+        margin-top: 4rem !important;
+    }
+    .play-op{
+       bottom: 14rem;
+       right: 4rem;
+    }
+   .cast{
+    justify-content: center;
+   }
+}
+/*for medium devices, like tablets*/
+@media (max-width:768px){
+    .nav{
+        padding: 11px 0;
+    }
+    .logo{
+        font-size: 1.2rem;
+    }
+    section{
+        padding: 2rem 0;
+    }
+    .home-img{
+        object-position: left;
+    }
+    .movie-type{
+        font-size: 0.875rem;
+    }
+    .tags span,
+    .about-anime p{
+        font-size: 0.875rem;
+    }
+    p{
+        font-size: 0.875rem;
+    }
+    .play-text h2,
+    .about-anime h2{
+        font-size: 1.3rem;
+    }
+    .play-op{
+        bottom: 10rem;
+        right: 2rem;
+    }
+}
+@media (max-width:514px){
+    .home{
+        min-height: 380px;
+    }
+    .heading-title{
+        font-size: 1rem;
+    }
+    .play-text{
+        padding: 20px;
+    }
+    .play-op{
+        bottom: 4rem;
+    }
+    .video-box{
+        width: 94%;
+    }
+    .cast-heading{
+        font-size: 1.1rem;
+    }
+    .cast-title{
+        font-size: 0.9rem;
+    }
+}
+@media (max-width:408px){
+    *{
+        scroll-padding-top: 5rem;
+    }
+    .nav{
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr 1fr;
+        row-gap: 5px;
+    }
+    .search-box{
+        max-width: 100%;
+        width: 100%;
+        border-radius: 4px;
+        order: 3;
+        grid-column-start: 1;
+        grid-column-end: 3;
+    }
+    .home,
+    .play-container{
+        margin-top: 7rem !important;
+    }
+    .movie-box{
+        height: 300px;
+    }
+    .movies-content{
+        grid-template-columns: repeat(auto-fit, minmax(150px,1fr));
+        gap: 1rem;
+    }
+}
+/* small devices*/
+@media (max-width:370px){
+    .home{
+        min-height: 300px;
+    }
+    .movie-box{
+        height: 285px;
+    }
+    .user-img,
+    .watch-btn .bx{
+        width: 35px;
+        height: 35px;
+    }
+    .navbar{
+        justify-content: space-around;
+        padding: 8px 0;
+    }
+    .watch-btn .bx{
+        font-size: 1.4rem;
+    }
+    .about-anime p{
+        text-align: justify;
+    }
+    .dowload-links{
+        grid-template-columns: 1fr;
+    }
 }
